# winclangcpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  1.cpp  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  run.sh  tempCodeRunnerFile.sh  why
.cache/clangd/index/: 1.cpp.DE9D5D39392D9B9D.idx
clangout/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
clangout/.cmake/api/v1/reply/: cache-v2-9edee48429215caca00a.json  cmakeFiles-v1-9ddfcecbb6eb5cc974bc.json  codemodel-v2-aec537437225b86f3204.json  index-2024-08-08T06-16-48-0635.json  target-MyExecutable-Debug-f087705bca7175062b65.json  toolchains-v1-b65cbbe4ecefcee0ef54.json
src/: main.cpp  test_if_success.cpp
src/LC/: 1282.cpp  1631.cpp  30.cpp  300.cpp  567.cpp  743.cpp  81.cpp  952.cpp  978.cpp  992.cpp  justrun.sh
src/LR/: CMakeLists.txt  CRTP.cpp  Singleton_pattern.cpp  aaaaa.cpp  ae_event_test.cpp  gptg.cpp  ident.cpp  justrun.sh  resource.cpp  rota.cpp  starry19.cpp  starry3.cpp  tehua.cpp  test.txt  testview.cpp  tetet.cpp  显式对象传参.cpp
src/co_/: CMakeLists.txt  debug.hpp  main.cpp  main2.cpp  run.sh  test.cpp
src/threadpool_1/: CMakeLists.txt  run.sh  tempCodeRunnerFile.sh  threadpool.cpp  threadpool.h
